go/pkg/operator/examples/service-mesh-istio-cluster.yaml
# Optional: Istio PeerAuthentication to enforce mTLS
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: antfly-istio-mtls
  namespace: default
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: antfly-database
  mtls:
    mode: STRICT

---
# Optional: Istio DestinationRule for connection pooling
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: antfly-istio
  namespace: default
spec:
  host: antfly-istio-leader.default.svc.cluster.local
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 100
        connectTimeout: 30s
      http:
        http1MaxPendingRequests: 100
        http2MaxRequests: 100
        maxRequestsPerConnection: 2
